2017-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Fix for bug reported on github by zneak.

2017-11-04  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSLocale.m: Protect against
	GSPrivateNativeCStringEncoding() corrupting the return value of
	setlocale(). Bug #52331 reported by Jakub Wilk <jwilk@jwilk.net>.

2017-10-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: Fix how UDateFormat is created. Fixes
	bug #52011.

2017-09-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Improve handling in case where we try to perform
	a method in a thread and it can't be woken (the pipe to awaken the run
	loop is full).  Instead of blocking forever, give up after a second.
	Typically pipe buffers are from 4KB to 64KB so a full buffer almost
	certainly indicates that the thread is hung.

2017-08-24  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Fix bug in ISO code methods.

2017-08-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m: Fixed error where the presence of a
	Location error was taken to indicate a redirect rather than looking
	at the HTTP status code for a 3xx value.

2017-08-16  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/NSURLDownload.h:	
	As of macOS 10.7, NSURLDownloadDelegate is exposed formally as a
	protocol. This adds the declaration to make this true for GNUstep.

2017-08-15  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/NSTextCheckingResult.h:	
	Define missing constants in the NSTextCheckingResult header.

2017-08-04  Daniel Ferreira <dtf@stanford.edu>

	* Headers/Foundation/NSObjCRuntime.h:	
	Add empty definitions for OSX Availability macros for compatibility
	purposes.

2017-07-10  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSString.m (lengthUTF8):
	Characters outside the BMP cannot be converted to Latin 1 string
	encoding either.

	* Tests/base/NSString/pairs.m (main):
	* Tests/base/NSString/unichar_const.m:
	Add test cases.

